--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,14 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:11-jdk
+      - image: circleci/openjdk:18.0.2
    
     working_directory: /c/Users/slavo/Desktop/portfolio/CrosswordSolver
 
     steps:
-      - checkout
+      - checkout:
+          git:
+            url: "https://github.com/SlavomirL/CrosswordSolver.git"  # Replace with your actual GitHub repository URL
 
       # Install MySQL client for database-related tasks
       - run: choco install mysql -y
