--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/openjdk:18.0.2
    
-    working_directory: /c/Users/slavo/Desktop/portfolio/CrosswordSolver
+    working_directory: ~/app
 
     steps:
       - checkout:
