--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:18.0.2
+      - image: cimg/openjdk:18.0.2
    
     working_directory: ~/app
 
