--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,8 @@ jobs:
     steps:
       - checkout:
           git:
-            url: "https://github.com/SlavomirL/CrosswordSolver.git"  # Replace with your actual GitHub repository URL
+            url: "https://github.com/SlavomirL/CrosswordSolver.git" 
 
-      - name: "Start SQL"  # Corrected indentation
-        command: docker-compose -f ./CrosswordSolver/docker-compose.yaml up -d mysql-server  # Corrected indentation
-
-      # Cache Gradle dependencies to speed up subsequent builds
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "build.gradle" }}
@@ -28,7 +24,6 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
-      # Run Gradle build and tests
       - run:
           name: Run Gradle build and tests
           command: ./gradlew.bat build --no-daemon
